--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "swagger-ui-express": "^5.0.0",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "validator": "^13.11.0",
+    "ejs": "^3.1.9",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
+    "express-validation": "^4.1.0",
+    "express-validator": "^7.0.1",
+    "cookie-parser": "^1.4.6"
   }
 }
