--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.4.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.0",
-    "swagger-ui-express": "^5.0.0",
-    "winston": "^3.11.0",
-    "validator": "^13.11.0",
     "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "express-validation": "^4.1.0",
     "express-validator": "^7.0.1",
-    "cookie-parser": "^1.4.6"
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
+    "mongodb": "^6.4.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
+    "swagger-ui-express": "^5.0.0",
+    "validator": "^13.11.0",
+    "winston": "^3.11.0"
   }
 }
